<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/LinearLayoutText"
        android:layout_width="390dp"
        android:layout_height="200dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/editTextSubject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="Enter Subject"
            android:ems="10"
            android:hint="@string/enter_subject"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints="Enter Score"
            android:ems="10"
            android:hint="@string/enter_score"
            android:inputType="number"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutButton"
        android:layout_width="390dp"
        android:layout_height="250dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="11dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayoutText">

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:text="@string/add_score" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:text="@string/delete_score" />

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:text="@string/update_score" />

        <Button
            android:id="@+id/buttonPrint"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:text="@string/print_all_score" />

        <Button
            android:id="@+id/buttonDelDB"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFC107"
            android:text="@string/delete_database"
            android:textColor="#880E4F"
            tools:ignore="TextSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutTextview"
        android:layout_width="390dp"
        android:layout_height="250dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayoutButton">

        <TextView
            android:id="@+id/textViewRecords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>